# Robotics_book

./: .env  .env.example  .gitignore  AUTH_SETUP.md  CLAUDE.md  Dockerfile  OPENROUTER_SETUP.md  README.md  app.py  docusaurus.config.js  main.py  package-lock.json  pyproject.toml  requirements.txt  sidebars.js  vercel.json
.claude/: settings.local.json
.specify/memory/: constitution.md
Rag-backend/: =1.4.0  README.md  auth_config.py  config.py  main.py  requirements.txt  simple_auth_test.py  start_server.py  test_auth.py  test_main.py
Rag-backend/.claude/: settings.local.json
Rag-backend/database/: __init__.py
Rag-backend/middleware/: auth.py
Rag-backend/models/: chapter_content.py  personalization_request.py  translation_request.py  user_profile.py  user_session.py
Rag-backend/routers/: auth.py  chapter.py  chat.py  personalization.py  translation.py  user.py
Rag-backend/schemas/: __init__.py
Rag-backend/services/: agent_service.py  openrouter_service.py  personalization_service.py  qdrant_service.py  translation_service.py
Rag-backend/utils/: __init__.py
backend/: README.md  main.py  pyproject.toml
docs/capstone/: integrated-project.md
docs/module-2/: virtual-environment.md
frontend-book/: docusaurus.config.js  package-lock.json  package.json
frontend-book/docs/: intro.md  quickstart.md  troubleshooting.md  validation.md
history/adr/: 0001-ros2-distribution-choice.md  0002-simulation-engine-criteria.md  0003-humanoid-robot-model-choice.md  0004-sensor-suite-selection.md  0005-edge-compute-platform.md  0006-ai-pipeline-stt-choice.md  (+32 more)
(+197 files in other folders)
