[project]
name = "backend"
version = "0.1.0"
description = "Docusaurus Embedding Pipeline - Extract text from Docusaurus sites, generate embeddings using Cohere, and store in Qdrant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cohere>=5.0.0",
    "qdrant-client>=1.9.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.1.0",
]
